--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~13.1.0",
+    "@angular/cdk": "^13.2.0",
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
     "@angular/forms": "~13.1.0",
+    "@angular/material": "^13.1.1",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
+    "emailjs": "^3.7.0",
     "jquery": "^3.6.0",
     "popper": "^1.0.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^13.1.0",
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.3.0",
     "tslib": "^2.3.0",
@@ -31,7 +36,7 @@
     "@angular/cli": "~13.1.1",
     "@angular/compiler-cli": "~13.1.0",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.37",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
